--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<title> </title>
+<title>Mark Seperator</title>
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/Vanceagher/markseperator/main/favicon.ico" />
 </html>
